--- a/src/scss/skill-set.scss
+++ b/src/scss/skill-set.scss
@@ -74,6 +74,7 @@
     p {
       font-size: 20px;
       font-weight: bold;
+      height: 100%;
       margin: auto;
       padding: 15px 25px 10px;
       position: relative;
